logs/jvm/nooptimise-jvm.log
Test.scala:14: error: type mismatch;
 found   : org.objectweb.asm.tree.InsnList
 required: scala.tools.asm.tree.InsnList
    val got = countMagicThrees(methodNode.instructions)
                                          ^
one error found
